--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Your API Key for OpenAI
-OPENAI_API_KEY=
+OPENAI_API_KEY=06b6888e-d53d-44f4-a485-14797ea176a0
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Custom base url for OpenAI API. default: https://api.openai.com
